site/src/main.scss
@use "sass:math";

@import "../../node_modules/normalize.css/normalize";

$padding: 1rem;
$padding-small: math.div($padding,2);
$margin: 1rem;
$margin-small: math.div($margin,2);

/**
* Generics
**/
*[class^="simplePass_passwordTarget"]{
    display: inline-block;
    width: 100%;
    overflow: auto;
    vertical-align: bottom;
    white-space: break-spaces;
    text-wrap: nowrap;
    text-rendering: optimizeLegibility;
    font-family: 'Courier New', Courier, monospace;
}

/**
* Elements
**/
html > body >{

    header {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
        padding: $padding;
    }

    header > * + * {
        margin: auto $margin;
    }

}

main{
    padding-bottom: 1rem;
}

form{
    border-radius: 10px;
}

label{
    display: inline-block;
    width: calc(100% - $padding-small);
    margin: $margin-small auto;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

label {

    > input:not([type="checkbox"],[type="radio"]){
        width: 100%;
    }

    > input[type="checkbox"],
    > input[type="radio"]{
        margin: auto $margin;
    }

}

button{
    min-height: 44px;
    min-width: 44px;
}

pre{
    border: 2px solid;
    box-sizing: border-box;
    padding: 0.5rem;
    overflow: auto;
    background-color: lightgray;
}

/**
* Classes
**/
.simplePass_messageBoard{
    border-radius: 10px 10px 0 0;
    display: flex;
    flex-flow: column;
}

.simplePass_messageBox{
    background-color: rgb(255, 79, 79);
    border: 1px solid;
    border-radius: 10px;
    box-sizing: border-box;
    padding: $padding-small;
    margin: $margin-small;
    width: max-content;
    height: max-content;
}

.simplePass_messageBox{

    > *:first-child{
        display: flex;
        flex-wrap: wrap;
        align-items: baseline;
    }

    > *:first-child > *:first-child{
        margin-right: auto;
    }

}

.simplePass_messageBackdrop{
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    top:0;
    left: 0;
}

.simplePass_messageBackdrop > .simplePass_messageBox{
    max-width: 100%;
    margin: $margin-small auto;
}

/**
* IDs
**/
#simplePass_form{
    border-radius: 0 0 10px 10px;
}

/**
* Lists
*/
.simplePass_messageBoard,
form{
    border: 1px solid;
    box-sizing: border-box;
    padding: $padding-small;
    margin: 0 $margin-small;
}

